@@ -1,6 +1,7 @@
 47
 ================
 
+12/07/23 Ability to generate random licence numbers, fix bug in licence display
 12/07/23 New location filter: My coordinated animals
 11/07/23 Users can now choose their preferred shelter view mode #1114
 11/07/23 additional fields in autocomplete when entering online form names #1309
